End of section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings":{
     "DefaultConnection": "Data source=skinet.db"
-  }
+  },
+  "ApiURL": "https://localhost:5001/"
 }
