--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "pwa-msedge",
+            "request": "launch",
+            "name": "Launch Edge against localhost (client)",
+            "url": "https://localhost:4200",
+            "webRoot": "${workspaceFolder}/client"
+        },
+        {
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
